<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:iconTint="@android:color/white"
        android:title="@string/menu_gallery2" />

    <item
        android:id="@+id/navigation_contactus"
        android:icon="@drawable/contactus_icon_side"
        android:iconTint="@android:color/white"
        android:title="Contact US" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_menu_camera"
        android:iconTint="@android:color/white"
        android:visible="false"
        android:title="@string/accounts" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_solid"
        android:iconTint="@android:color/white"
        android:title="@string/profile" />

</menu>